--- a/lorenz_96_pinn.ipynb
+++ b/lorenz_96_pinn.ipynb
@@ -20,22 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b96c1271",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mlorenz_96_derivatives\u001b[39m(x, F\u001b[39m=\u001b[39m\u001b[39m8\u001b[39m):\n\u001b[0;32m      4\u001b[0m     N \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(x)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -58,10 +46,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2904999d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 64)                384       \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 5)                 325       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4869 (19.02 KB)\n",
+      "Trainable params: 4869 (19.02 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -89,10 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d1cb381c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 64)                384       \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 5)                 325       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4869 (19.02 KB)\n",
+      "Trainable params: 4869 (19.02 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "def physics_loss(y_true, y_pred):\n",
     "    predicted_derivatives = lorenz_96_derivatives(y_pred)\n",
@@ -117,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d74b168a",
    "metadata": {},
    "outputs": [],
